--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Week 5 Assignment</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Week 5 Assignment</title>
+  <link rel="stylesheet" href="./css/stylesheet.css">
+</head>
+
+<body>
+  <header>
     <h1>Week 5 Assignment - Part 2</h1>
-    <p>See console for output.</p>
-    <!-- Create an unordered list with any questions you have -->
-  </body>
+    <h2>John's Record Shop</h2>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
+  <p>See console for output.</p>
+  <!-- Create an unordered list with any questions you have -->
+</body>
+
 </html>
