adjusted some layout settings

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,17 +8,17 @@
 </head>
 
 <body>
-  <header>
-    <h1>Week 5 Assignment - Part 2</h1>
-    <h2>John's Record Shop</h2>
+  <header class=title>
+    <h1 id="titleH1">Week 5 Assignment - Part 2</h1>
+    <h2 id="titleH2">John's Record Shop</h2>
   </header>
   <main>
+    <p>See console for output.</p>
 
   </main>
   <footer>
 
   </footer>
-  <p>See console for output.</p>
   <!-- Create an unordered list with any questions you have -->
 </body>
 
